spacing issues

--- a/frontend/src/views/user/components/UserCarousels.css
+++ b/frontend/src/views/user/components/UserCarousels.css
@@ -51,7 +51,8 @@
   margin-right: auto;
   margin-top: 15px;
   width: 90%;
-  height: 200px;
+  height: 170px;
+  margin-top: 5rem;
 }
 .slick-dots {
   bottom: 10px;
@@ -78,7 +79,8 @@
     margin-right: auto;
     margin-top: 15px;
     width: 100%;
-    height: 200px;
+    margin-top: 3.7rem;
+    /* height: 200px; */
   }
   .slider-img {
     max-width: 100%;
